@@ -6,11 +6,12 @@ AT_SETUP([check lixad process is NOT active...])
 AT_CHECK([ps -ef | grep lixad | grep -v grep], [1], [ignore], [ignore])
 AT_CLEANUP
 
+m4_include([xta.at])
 m4_include([lixa-config.at])
 m4_include([env_var.at])
 m4_include([nonapi.at])
 m4_include([lixavsr.at])
-m4_include([xta.at])
+#m4_include([xta.at])
 m4_include([mysql.at])
 m4_include([postgresql.at])
 m4_include([mysql_postgresql.at])
