@@ -359,6 +359,8 @@ xa_prepare/0
 xa_commit/0
 xa_close/0
 ]])
+# wait a second for recovery pending transaction
+AT_CHECK([sleep 1], [0], [ignore], [ignore])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0004 ; lixa_test_exec.sh noreset none case0103 3 1 0 $TESTS_TMP_FILE1 2>&1], [0], [ignore], [ignore])
 AT_CHECK([lixad --config-file=$TESTS_ETC_DIR/lixad_conf.xml --dump=u|tee $TESTS_TMP_FILE1 ; grep 'recovery failed: 1' $TESTS_TMP_FILE1], [1], [ignore], [ignore])
 AT_CLEANUP
